--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url =jdbc:oracle:thin@localhost:1521:xe
+jdbc.url =jdbc:oracle:thin:@127.0.0.1:1521:XE
 jdbc.username=tuna
 jdbc.password=tuna
