--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,5 +39,14 @@
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 
 	<!-- Processes application requests -->
+	
+	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+		      /WEB-INF/spring/root-context.xml
+		      /WEB-INF/config/spring-security.xml
+		</param-value>
+	</context-param>
 
 </web-app>
