--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,4 +19,17 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.form</url-pattern>
     </servlet-mapping>
+    
+    <filter>
+		<filter-name>encodingFilter</filter-name> <!-- 필터의 name은 원하는대로 지정 가능 -->
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
