--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,21 @@
 		<org.slf4j-version>1.7.25</org.slf4j-version>
 	</properties>
 	<dependencies>
+		<!-- mail -->
+		<dependency> 
+			<groupId>javax.mail</groupId> 
+			<artifactId>mail</artifactId> 
+			<version>1.4.7</version> 
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>5.1.5.RELEASE</version>
+		</dependency>
+
+	
 		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
