에러페이지 추가

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,5 +44,16 @@
 	<!-- Processes application requests -->
 	
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	
+	<!-- error page -->
+    <error-page>
+	    <error-code>404</error-code>
+	    <location>/WEB-INF/views/common/error404.jsp</location>
+	</error-page>
+	
+	<error-page>
+	    <error-code>500</error-code>
+	    <location>/WEB-INF/views/common/error500.jsp</location>
+	</error-page>
 
 </web-app>
